# nav2_minimal_turtlebot_simulation

./: README.md
.github/workflows/: lint.yml  test.yml
nav2_min_tb4_description/: CMakeLists.txt  README.md  package.xml
nav2_min_tb4_description/launch/: robot_description.launch.py
nav2_min_tb4_description/urdf/icreate/: bumper.urdf.xacro  caster.urdf.xacro  common_properties.urdf.xacro  create3.urdf.xacro  wheel.urdf.xacro  wheel_drop.urdf.xacro  wheel_with_wheeldrop.urdf.xacro
nav2_min_tb4_description/urdf/sensors/: camera_bracket.urdf.xacro  oakd.urdf.xacro  rplidar.urdf.xacro
nav2_min_tb4_description/urdf/standard/: tower_sensor_plate.urdf.xacro  tower_standoff.urdf.xacro  turtlebot4.urdf.xacro  weight_block.urdf.xacro
nav2_min_tb4_sim/: CMakeLists.txt  README.md  package.xml
nav2_min_tb4_sim/launch/: simulation.launch.py  spawn_tb4.launch.py
nav2_min_tb4_sim/worlds/: depot.sdf
nav2_minimal_tb3_sim/: CMakeLists.txt  README.md  package.xml
nav2_minimal_tb3_sim/configs/: turtlebot3_waffle_bridge.yaml  turtlebot3_waffle_gps_bridge.yaml
nav2_minimal_tb3_sim/launch/: spawn_tb3.launch.py  spawn_tb3_gps.launch.py
nav2_minimal_tb3_sim/urdf/: cardboard_box.sdf  gz_waffle.sdf  gz_waffle.sdf.xacro  gz_waffle_gps.sdf.xacro  turtlebot3_waffle.urdf  turtlebot3_waffle_gps.urdf
nav2_minimal_tb3_sim/worlds/: tb3_gps.sdf.xacro  tb3_sandbox.sdf.xacro
nav2_minimal_tb4_description/: CMakeLists.txt  README.md  package.xml
nav2_minimal_tb4_description/hooks/: tb4_description.dsv.in
nav2_minimal_tb4_description/launch/: robot_description.launch.py
nav2_minimal_tb4_description/rviz/: config.rviz
nav2_minimal_tb4_description/urdf/icreate/: caster.urdf.xacro  common_properties.urdf.xacro  create3.urdf.xacro  wheel.urdf.xacro
nav2_minimal_tb4_description/urdf/icreate/sensors/: imu.urdf.xacro
nav2_minimal_tb4_description/urdf/sensors/: camera_bracket.urdf.xacro  oakd.urdf.xacro  rplidar.urdf.xacro  velodyne.urdf.xacro
nav2_minimal_tb4_description/urdf/standard/: tower_sensor_plate.urdf.xacro  tower_standoff.urdf.xacro  turtlebot4.urdf.xacro  weight_block.urdf.xacro
nav2_minimal_tb4_sim/: CMakeLists.txt  README.md  package.xml
nav2_minimal_tb4_sim/configs/: tb4_bridge.yaml
nav2_minimal_tb4_sim/launch/: simulation.launch.py  spawn_tb4.launch.py
nav2_minimal_tb4_sim/worlds/: depot.sdf  warehouse.sdf
